--- a/main.html
+++ b/main.html
@@ -8,6 +8,28 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>My Playlist</h1>
+	<div class="list">
+		<ul>
+			<li>Song 1</li>
+			<li>Song 2</li>
+			<li>Song 3</li>
+			<li>Song 4</li>
+			<li>Song 5</li>
+		</ul>
+	</div>
+	<h2>Now Playing...</h2>
+	<div class="music">
+		<video class="player_one" controls>
+			<source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
+		</video>
+		<h3>MP3 songs</h3>
+		<p>maan meri jaan</p>
+		<audio class="player_two" controls>
+			
+			<source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mp3">
+		</audio>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
